--- a/src/well-architected-bp-mcp-server/pyproject.toml
+++ b/src/well-architected-bp-mcp-server/pyproject.toml
@@ -28,6 +28,11 @@ dev = [
     "pyright>=1.1.0",
     "ruff>=0.1.0",
 ]
+test = [
+    "pytest>=7.0.0",
+    "coverage>=7.0.0",
+    "pytest-cov>=4.0.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/awslabs/mcp"
