--- a/src/well-architected-bp-mcp-server/pyproject.toml
+++ b/src/well-architected-bp-mcp-server/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = [
 dev = [
     "pyright>=1.1.0",
     "ruff>=0.1.0",
+    "pytest>=7.0.0",
+    "coverage>=7.0.0",
+    "pytest-cov>=4.0.0",
 ]
 test = [
     "pytest>=7.0.0",
